# Nietchux

./: .gitignore  CMakeLists.txt  README.md  toolchain-m68k.cmake  toolchain-powerpc.cmake
bootloader/: CMakeLists.txt
bootloader/include/: ext2.h  openfirmware.h
bootloader/src/: openfirmware.c
bootloader/stage1/: CMakeLists.txt
bootloader/stage2/: CMakeLists.txt
kernel/: CMakeLists.txt
kernel/include/arch/powerpc/: cpu.h  mmu.h
kernel/include/dev/: console.h  ide.h  serial.h
kernel/include/fs/: ext2.h  vfs.h
tools/: mkimage.sh
